# tree-worm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-linux-x64-musl/: package.json
npm/cli-win32-x64/: package.json
npm/tree-worm/: package.json
src/: graph.rs  main.rs  parser.rs  store.rs  types.rs
